# distribuid-system-simulator

./: .gitignore  Makefile  README.md  consul-services.json  docker-compose.yml  init.sql  package-lock.json  simulator-multi-db.py  simulator.py  tasks.md
_bmad-output/planning-artifacts/research/: technical-stack-validation-research-2026-02-28.md
agent/: .env.example  Dockerfile  langgraph.json  pyproject.toml
agent/nexus_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/src/: config.py  main.py
agent/src/models/: events.py
agent/src/planner/: graph.py  nodes.py  state.py
agent/src/producer/: kafka_producer.py
agent/tests/: test_planner.py
docs/: blueprint-arquitetura.md  phase-2-agent-python-completion.md  quick-spec-fase2-agent-python.md  quick-spec-fase3-server-go.md  quick-spec-fase4-coordenacao-resiliencia.md  quick-spec-fase5-observabilidade-caos.md  quick-spec-fase6-qualidade-demo.md  quick-spec-phase2-improvements.md  tasks.md  tech-spec-event-schemas-sql-improvements.md
monitoring/grafana/dashboards/: nexus-overview.json
schemas/events/: abort-plan.schema.json  envelope.schema.json  inventory-validated.schema.json  order-completed.schema.json  order-created.schema.json  order-shipped.schema.json  payment-processed.schema.json
scripts/: chaos_test.py  e2e_demo.py  validate-connectivity.sh
server/: .env.example  Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
server/internal/config/: config.go
server/internal/consul/: kv.go  kv_test.go
server/internal/consumer/: consumer.go  consumer_test.go
(+11 files in other folders)
